Agrego imagen al registro

--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -28,27 +28,11 @@
                 enctype="multipart/form-data">
 
                 <!-- Grupo: Foto Perfil -->
-                <div class="card border mr10 ml10 mrt">
-                    <div class="form-group w90 mr10 ml10">
-                        <label class="formulario-label" for="img">Foto: (opcional)</label>
-                        <div class="col-sm-6">
-                            <label for="img" class="btn btn-dark"><img class="w20"
-                                    th:src="@{/img/felicidad.png}" alt="emogi"> Subí tu foto</label>
-                            <input type="file" class="form-control-file btn" id="img" name="img">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Grupo: Correo Electronico -->
-                <div class="formulario-grupo" id="grupo-email">
-                    <label for="email" class="formulario-label">e-mail</label>
+                <div class="formulario-grupo" id="grupo-foto">
+                    <label class="formulario-label" for="img">Foto: (opcional)</label>
                     <div class="formulario-grupo-input">
-                        <input type="email" class="formulario-input" name="email" id="email"
-                            placeholder="correo@correo.com">
-                        <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                        <input type="file" class="formulario-input" id="img" name="img">
                     </div>
-                    <p class="formulario-input-error">El e-mail solo puede contener letras, numeros, puntos, guiones y
-                        guion bajo.</p>
                 </div>
 
                 <!-- Grupo: Usuario -->
@@ -61,6 +45,18 @@
                     </div>
                     <p class="formulario-input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede contener
                         numeros, letras y guion bajo.</p>
+                </div>
+
+                <!-- Grupo: Correo Electronico -->
+                <div class="formulario-grupo" id="grupo-email">
+                    <label for="email" class="formulario-label">e-mail</label>
+                    <div class="formulario-grupo-input">
+                        <input type="email" class="formulario-input" name="email" id="email"
+                            placeholder="correo@correo.com">
+                        <i class="formulario-validacion-estado fas fa-times-circle"></i>
+                    </div>
+                    <p class="formulario-input-error">El e-mail solo puede contener letras, numeros, puntos, guiones y
+                        guion bajo.</p>
                 </div>
 
                 <!-- Grupo: Nombre -->
