Cambios en inicarSesion.html

--- a/src/main/resources/templates/usuario/iniciarSesion.html
+++ b/src/main/resources/templates/usuario/iniciarSesion.html
@@ -38,7 +38,8 @@
                 <div class="formulario-grupo" id="grupo-password">
                     <label for="contrasena" class="formulario-label">Contraseña</label>
                     <div class="formulario-grupo-input">
-                        <input type="password" class="formulario-input" name="contrasena" id="password" required autocomplete="off">
+                        <input type="password" class="formulario-input" name="contrasena" id="password" required
+                            autocomplete="off">
                     </div>
                 </div>
 
