--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -122,7 +122,7 @@
     <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer}"></div>
 
     <script th:src="@{/scripts/formulario.js}"></script>
-    <script src="https://kit.fontawesome.com/80ba51f8fa.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/80ba51f8fa.js" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
