--- a/src/main/resources/templates/usuario/editar.html
+++ b/src/main/resources/templates/usuario/editar.html
@@ -21,134 +21,141 @@
 
         <div class="contenedor-formulario">
 
-            <form th:action="@{/usuario/actualizar}" method="post" enctype="multipart/form-data">
+            <form id="formulario" th:action="@{/usuario/actualizar}" method="post" enctype="multipart/form-data">
                 <!-- Obtenemos los datos del usuario -->
                 <input type="hidden" name="id" th:value="${usuario.IdUsuario}">
 
-                <div class="center mrt-30 w100 center">
-                    <div class="contenedor-img">
-                        <img class="circle" th:src="@{/images/{img} (img=${usuario.foto})}" alt="foto">
+                <!-- Grupo: Perfil -->
+                <div class="card border mrt-10 center">
+
+                    <div class="card w90 mrt-30 mrb-30">
+                        <div class="contenedor-user-name white">
+                            <h4 class="center" th:text="${usuario.nombreUsuario}"></h4>
+                        </div>
+
+                        <div class="center mrt-30 w100 center">
+                            <div class="contenedor-img">
+                                <img class="circle" th:src="@{/images/{img} (img=${usuario.foto})}" alt="foto">
+                            </div>
+                        </div>
+
+                        <div class="w100 center mrt-10">
+                            <label for="img" class="btn btn-dark"><img class="w25" th:src="@{/iconos/camara.png}"
+                                    alt="camara">
+                                Cambiar foto</label>
+                        </div>
+
+                        <div class="oculto">
+                            <input type="file" class="form-control-file btn" id="img" name="img">
+                        </div>
+
+                        <h2 class="center mrt-10" th:text="${usuario.nombre + ' ' + usuario.apellido}"></h2>
+
+                        <p class="center mrt-10" th:text="${usuario.email}"></p>
                     </div>
-                </div>
 
-                <div class="w100 center mrt-10">
-                    <label for="img" class="btn btn-dark"><img class="w25" th:src="@{/iconos/camara.png}" alt="camara">
-                        Cambiar foto</label>
-                </div>
 
-                <div class="oculto">
-                    <input type="file" class="form-control-file btn" id="img" name="img">
-                </div>
-
-                <h2 class="center mrt-10" th:text="${usuario.nombre + ' ' + usuario.apellido}"></h2>
-
-                <div class="card border w100 mrt-10">
-                    <div class="form-group mr10 ml10">
-                        <label for="nombreUsuario">Nombre de Usuario</label>
-                        <h4 class="center" th:text="${usuario.nombreUsuario}"></h4>
-                    </div>
                 </div>
 
                 <div class="formulario mrt-10">
 
-                    <div class="card border w50 mr10 ml10 mrt-10">
-                        <div class="form-group mr10 ml10">
-                            <label for="nombre">Nombre</label> 
-                            <input type="text" class="form-control" id="nombre"
-                                name="nombre" required placeholder="Ingrese su Nombre" autocomplete="off"
-                                th:value="${usuario.nombre}">
+                    <!-- Grupo: Nombre -->
+                    <div class="formulario-grupo" id="grupo-nombre">
+                        <label for="nombre" class="formulario-label">Nombre</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input border" id="nombre" name="nombre" required
+                                placeholder="Ingrese su Nombre" autocomplete="off" th:value="${usuario.nombre}">
                         </div>
                     </div>
 
-                    <div class="card border w50 mr10 ml10 mrt-10">
-                        <div class="form-group mr10 ml10">
-                            <label for="apellido">Apellido</label>
-                            <input type="text" class="form-control" id="apellido" name="apellido" required
+                    <!-- Grupo: Apellido -->
+                    <div class="formulario-grupo" id="grupo-apellido">
+                        <label for="apellido" class="formulario-label">Apellido</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input border" id="apellido" name="apellido" required
                                 placeholder="Ingrese su Apellido" autocomplete="off" th:value="${usuario.apellido}">
                         </div>
                     </div>
 
-
-
-                    <div class="card border w50 mr10 ml10 mrt-10">
-                        <div class="form-group mr10 ml10">
-                            <label for="documento">DNI / CI / Pasaporte / Otro</label>
-                            <input type="text" class="form-control" id="documento" name="documento" required
+                    <!-- Grupo: DNI -->
+                    <div class="formulario-grupo" id="grupo-documento">
+                        <label for="documento" class="formulario-label">DNI / CI / Pasaporte / Otro</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input border" id="documento" name="documento"
                                 placeholder="Ingrese su Número de Documento" autocomplete="off"
                                 th:value="${usuario.documento}">
                         </div>
                     </div>
 
-                    <div class="card border w50 mr10 ml10 mrt-10">
-                        <div class="form-group mr10 ml10">
-                            <label for="telefono">Teléfono</label>
-                            <input type="text" class="form-control" id="telefono" name="telefono" required
+                    <!-- Grupo: Teléfono -->
+                    <div class="formulario-grupo" id="grupo-telefono">
+                        <label for="telefono" class="formulario-label">Teléfono</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input border" id="telefono" name="telefono" required
                                 placeholder="Ingrese Número de Teléfono" autocomplete="off"
                                 th:value="${usuario.telefono}">
                         </div>
                     </div>
 
-
-
-                    <div class="card border w50 mr10 ml10 mrt-10">
-                        <div class="form-group mr10 ml10">
-                            <label for="direccion">Calle</label>
-                            <input type="text" class="form-control" id="direccion" name="direccion" required
+                    <!-- Grupo: Calle -->
+                    <div class="formulario-grupo" id="grupo-direccion">
+                        <label for="direccion" class="formulario-label">Calle</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input border" id="direccion" name="direccion"
                                 placeholder="Ingrese su Calle" autocomplete="off" th:value="${usuario.direccion}">
                         </div>
                     </div>
 
-                    <div class="card border w50 mr10 ml10 mrt-10">
-                        <div class="form-group mr10 ml10">
-                            <label for="altura">Nro</label>
-                            <input type="text" class="form-control" id="altura" name="altura" required
+                    <!-- Grupo: Nro -->
+                    <div class="formulario-grupo" id="grupo-altura">
+                        <label for="altura" class="formulario-label">Nro</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input border" id="altura" name="altura"
                                 placeholder="Ingrese el Número" autocomplete="off" th:value="${usuario.altura}">
                         </div>
                     </div>
 
-
-
-                    <div class="card border w50 mr10 ml10 mrt-10">
-                        <div class="form-group mr10 ml10">
-                            <label for="piso">Piso</label>
-                            <input type="text" class="form-control" id="piso" name="piso" required
+                    <!-- Grupo: Piso -->
+                    <div class="formulario-grupo" id="grupo-piso">
+                        <label for="piso" class="formulario-label">Piso</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input border" id="piso" name="piso"
                                 placeholder="Ingrese su Piso" autocomplete="off" th:value="${usuario.piso}">
                         </div>
                     </div>
 
-                    <div class="card border w50 mr10 ml10 mrt-10">
-                        <div class="form-group mr10 ml10">
-                            <label for="depto">Depto</label>
-                            <input type="text" class="form-control" id="depto" name="depto" required
+                    <!-- Grupo: Depto -->
+                    <div class="formulario-grupo" id="grupo-depto">
+                        <label for="depto" class="formulario-label">Depto</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input border" id="depto" name="depto"
                                 placeholder="Ingrese su Depto" autocomplete="off" th:value="${usuario.depto}">
                         </div>
                     </div>
 
-
-
-                    <div class="card border w50 mr10 ml10 mrt-10">
-                        <div class="form-group mr10 ml10">
-                            <label for="localidad">Localidad</label>
-                            <input type="text" class="form-control" id="localidad" name="localidad" required
+                    <!-- Grupo: Localidad -->
+                    <div class="formulario-grupo" id="grupo-localidad">
+                        <label for="localidad" class="formulario-label">Localidad</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input border" id="localidad" name="localidad"
                                 placeholder="Ingrese su Localidad" autocomplete="off" th:value="${usuario.localidad}">
                         </div>
                     </div>
 
-                    <div class="card border w50 mr10 ml10 mrt-10">
-                        <div class="form-group mr10 ml10">
-                            <label for="provincia">Provincia</label>
-                            <input type="text" class="form-control" id="provincia" name="provincia" required
+                    <!-- Grupo: Provincia -->
+                    <div class="formulario-grupo" id="grupo-provincia">
+                        <label for="provincia" class="formulario-label">Provincia</label>
+                        <div class="formulario-grupo-input">
+                            <input type="text" class="formulario-input border" id="provincia" name="provincia"
                                 placeholder="Ingrese su Provincia" autocomplete="off" th:value="${usuario.provincia}">
                         </div>
                     </div>
-
-
                 </div>
 
                 <div class="col-sm-12 center mrt-30">
-                    <a class="btn btn-secondary" th:href="@{/}"><img class="w25" th:src="@{/img/cancelar.png}"
+                    <a class="btn btn-secondary  mr-30" th:href="@{/}"><img class="w25" th:src="@{/iconos/cancelar.png}"
                             alt="cancelar"> Cancelar</a>
-                    <button type="submit" class="btn btn-dark ml10"><img class="w25" th:src="@{/img/guardar.png}"
+                    <button type="submit" class="btn btn-dark ml10"><img class="w25" th:src="@{/iconos/guardar.png}"
                             alt="guardar"> Guardar Cambios</button>
                 </div>
             </form>
@@ -160,11 +167,11 @@
     <!-- Footer -->
     <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer}"></div>
 
-    <script th:src="@{/scripts/formulario.js}"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <!-- <script src="https://kit.fontawesome.com/80ba51f8fa.js" crossorigin="anonymous"></script> -->
+    <script th:src="@{/scripts/formulario.js}"></script>
 </body>
 
 </html>
