--- a/src/main/resources/templates/usuario/templateUsuario.html
+++ b/src/main/resources/templates/usuario/templateUsuario.html
@@ -77,7 +77,7 @@
 
                             <li class="center">
                                 <div class="card border mrt-5 w90 center">
-                                    <a class="black" th:href="@{/usuario/actualizar/{id} (id=${usuario.IdUsuario}) }">
+                                    <a class="black" th:href="@{/usuario/editar/{id} (id=${usuario.IdUsuario}) }">
                                         <div class="dos-columnas">
                                             <div>
                                                 <img class="w20" th:src="@{/iconos/sobre-nosotros-negro.png}"
