--- a/src/main/resources/templates/usuario/iniciarSesion.html
+++ b/src/main/resources/templates/usuario/iniciarSesion.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link th:href="@{/css/estilos.css}" rel="stylesheet">
 </head>
 
@@ -44,7 +46,8 @@
                 </div>
 
                 <div class="contenedor-boton formulario-grupo mrt-30">
-                    <button type="submit" class="formulario-btn">Ingresar</button>
+                    <button type="submit" class="btn btn-dark"><img class="w25  mr-10" th:src="@{/iconos/felicidad.png}"
+                        alt="felicidad"> Ingresar</button>
                 </div>
 
                 <div class="contenedor-boton mrt-30">
