--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link th:href="@{/css/estilos.css}" rel="stylesheet">
 </head>
 
@@ -24,14 +26,20 @@
                 <img class="img-iniciarSesion" th:src="@{/imagenes/registro.png}" alt="registro">
             </div>
 
-            <form id="formulario" th:action="@{/usuario/save}" method="post"
-                enctype="multipart/form-data">
+            <form id="formulario" th:action="@{/usuario/save}" method="post" enctype="multipart/form-data">
 
                 <!-- Grupo: Foto Perfil -->
                 <div class="formulario-grupo" id="grupo-foto">
                     <label class="formulario-label" for="img">Foto: (opcional)</label>
                     <div class="formulario-grupo-input">
-                        <input type="file" class="formulario-input" id="img" name="img">
+                        <div class="w100 center mrt-10">
+                            <label for="img" class="btn btn-dark"><img class="w25 mr-10" th:src="@{/iconos/felicidad.png}"
+                                    alt="felicidad">
+                                Subí tu foto</label>
+                        </div>
+                        <div class="oculto">
+                            <input type="file" class="form-control-file btn" id="img" name="img">
+                        </div>
                     </div>
                 </div>
 
@@ -65,7 +73,8 @@
                     <div class="formulario-grupo" id="grupo-nombre">
                         <label for="nombre" class="formulario-label">Nombre</label>
                         <div class="formulario-grupo-input">
-                            <input type="text" class="formulario-input" name="nombre" id="nombre" placeholder="Nombre" required>
+                            <input type="text" class="formulario-input" name="nombre" id="nombre" placeholder="Nombre"
+                                required>
                             <i class="formulario-validacion-estado fas fa-times-circle"></i>
                         </div>
                         <p class="formulario-input-error">El Nombre tiene que ser de 4 a 16 dígitos.</p>
@@ -108,7 +117,8 @@
                     </div>
 
                     <div class="formulario-grupo formulario-grupo-btn-enviar">
-                        <button type="submit" class="formulario-btn">Enviar</button>
+                        <button type="submit" class="btn btn-dark"><img class="w25 mr-10" th:src="@{/iconos/guardar.png}"
+                            alt="guardar"> Guardar</button>
                         </p>
                     </div>
 
