--- a/src/main/resources/templates/administrador/homeAdministrador.html
+++ b/src/main/resources/templates/administrador/homeAdministrador.html
@@ -1,21 +1,61 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>Recepción Equipos</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- CSS -->
+
+<head>
+    <title>Recepción Equipos</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link th:href="@{/css/estilos.css}" rel="stylesheet">
-    </head>
-    <body>
-        
-        <!-- Header -->
-    <div th:insert="~{usuario/templateUsuario.html::header}" th:if="${sesion==null}"></div>
+</head>
+
+<body>
+
+    <!-- Header -->
+    <div th:insert="~{usuario/templateUsuario.html::header-admin}" th:unless="${sesion==null}"></div>
 
     <!-- Main -->
     <main>
-        <div>
-            <h1>Contenido del Administrador</h1>
+        <div class="contenedor-seccion">
+            <div class="seccion-img">
+                <img src="/imagenes/gerente.avif" alt="administrador">
+            </div>
+            <div class="seccion-texto">
+                <h1>Home Administrador</h1>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nisi fuga eligendi maxime nemo ex
+                    quam error molestias totam. Perferendis eius accusantium error assumenda nisi odit incidunt qui aut
+                    quasi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo eum ex, voluptates
+                    consequuntur voluptatum ad architecto rerum magnam vel deleniti impedit alias quibusdam facilis
+                    officiis. </p>
+                <br>
+                <p> Maxime ea
+                    consectetur minima molestias perspiciatis rem adipisci error enim repellendus quae inventore eum
+                    possimus magni earum architecto, repellat suscipit impedit. Animi!</p>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="contenedor-seccion">
+            <div class="seccion-texto">
+                <h1>Home Administrador</h1>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nisi fuga eligendi maxime nemo ex
+                    quam error molestias totam. Perferendis eius accusantium error assumenda nisi odit incidunt qui aut
+                    quasi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo eum ex, voluptates
+                    consequuntur voluptatum ad architecto rerum magnam vel deleniti impedit alias quibusdam facilis
+                    officiis. </p>
+                <br>
+                <p> Maxime ea
+                    consectetur minima molestias perspiciatis rem adipisci error enim repellendus quae inventore eum
+                    possimus magni earum architecto, repellat suscipit impedit. Animi!</p>
+            </div>
+            <div class="seccion-img">
+                <img src="/imagenes/manager.jpg" alt="administrador">
+            </div>
         </div>
 
     </main>
@@ -23,5 +63,8 @@
 
     <!-- Footer -->
     <div th:insert="~{usuario/templateUsuario.html::footer}"></div>
-    </body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+
 </html>
