--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -129,7 +129,7 @@
     </main>
 
     <!-- Footer -->
-    <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer}"></div>
+    <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer-user}"></div>
 
     <script th:src="@{/scripts/formulario.js}"></script>
     <!-- <script src="https://kit.fontawesome.com/80ba51f8fa.js" crossorigin="anonymous"></script> -->
