--- a/src/main/resources/templates/administrador/homeAdministrador.html
+++ b/src/main/resources/templates/administrador/homeAdministrador.html
@@ -62,7 +62,8 @@
 
 
     <!-- Footer -->
-    <div th:insert="~{usuario/templateUsuario.html::footer}"></div>
+    <div th:insert="~{usuario/templateUsuario.html::footer-admin}"></div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
