--- a/src/main/resources/templates/usuario/editar.html
+++ b/src/main/resources/templates/usuario/editar.html
@@ -161,7 +161,7 @@
     </main>
 
     <!-- Footer -->
-    <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer}"></div>
+    <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer-user}"></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
