--- a/src/main/resources/templates/administrador/editarAdmin.html
+++ b/src/main/resources/templates/administrador/editarAdmin.html
@@ -149,7 +149,7 @@
                 </div>
 
                 <div class="col-sm-12 center mrt-30">
-                    <a class="btn btn-secondary mr-30" th:href="@{/}"><img class="w25" th:src="@{/iconos/cancelar.png}"
+                    <a class="btn btn-secondary mr-30" th:href="@{/administrador/homeAdmin}"><img class="w25" th:src="@{/iconos/cancelar.png}"
                             alt="cancelar"> Cancelar</a>
                     <button type="submit" class="btn btn-dark ml10"><img class="w25" th:src="@{/iconos/guardar.png}"
                             alt="guardar"> Guardar Cambios</button>
