--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -185,6 +185,27 @@ body {
     border-radius: 5px;
 }
 
+.contenedor-error {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.alerta-error {
+    display: flex;
+    width: 250px;
+    height: 50px;
+    background-color: #f73535d6;
+    color:#fff;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 5px;
+}
+
 
 /* Estilos Generales */
 
