--- a/src/main/resources/templates/usuario/iniciarSesion.html
+++ b/src/main/resources/templates/usuario/iniciarSesion.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link th:href="@{/css/estilos.css}" rel="stylesheet">
 </head>
 
@@ -25,7 +25,11 @@
                 <img class="img-iniciarSesion" th:src="@{/imagenes/iniciarSesion.png}" alt="login">
             </div>
 
-            <div th:if="${error}" class="alert alert-danger" th:text="${error}"></div>
+            <div class="contenedor-error">
+                <div th:if="${error}" class="alerta-error" th:text="${error}"></div>
+            </div>
+
+
 
             <form class="formulario-inicio-sesion mrt-30" th:action="@{/usuario/acceder}" method="post">
 
@@ -49,7 +53,7 @@
 
                 <div class="contenedor-boton formulario-grupo mrt-30">
                     <button type="submit" class="btn btn-dark"><img class="w25  mr-10" th:src="@{/iconos/felicidad.png}"
-                        alt="felicidad"> Ingresar</button>
+                            alt="felicidad"> Ingresar</button>
                 </div>
 
                 <div class="contenedor-boton mrt-30">
