--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -206,6 +206,27 @@ body {
     border-radius: 5px;
 }
 
+.contenedor-exito {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.alerta-exito {
+    display: flex;
+    width: 250px;
+    height: 50px;
+    background-color: #13ad13d6;
+    color:#fff;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 5px;
+}
+
 
 /* Estilos Generales */
 
