--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -213,6 +213,7 @@ body {
     height: 50px;
     justify-content: center;
     align-items: center;
+    margin: 20px;
 }
 
 .alerta-exito {
@@ -225,6 +226,16 @@ body {
     align-items: center;
     text-align: center;
     border-radius: 5px;
+    animation: desaparecer 10s forwards;
+}
+
+@keyframes desaparecer {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        display: none; /* Oculta el elemento completamente */
+    }
 }
 
 
