--- a/src/main/resources/templates/administrador/cambiarContrasena.html
+++ b/src/main/resources/templates/administrador/cambiarContrasena.html
@@ -85,6 +85,8 @@
                 </div>
 
                 <div class="contenedor-boton formulario-grupo mrt-30">
+                    <a class="btn btn-secondary mr-30" th:href="@{/administrador/homeAdmin}"><img class="w25" th:src="@{/iconos/cancelar.png}"
+                        alt="cancelar"> Cancelar</a>
                     <button type="submit" class="btn btn-dark"><img class="w25  mr-10" th:src="@{/iconos/felicidad.png}"
                             alt="felicidad"> Cambiar Contraseña</button>
                 </div>
