--- a/src/main/resources/templates/usuario/iniciarSesion.html
+++ b/src/main/resources/templates/usuario/iniciarSesion.html
@@ -33,7 +33,7 @@
                 <div th:if="${exito}" class="alerta-exito" th:text="${exito}"></div>
             </div>
 
-            <form class="formulario-inicio-sesion mrt-30" th:action="@{/usuario/acceder}" method="post">
+            <form class="formulario-inicio-sesion" th:action="@{/usuario/acceder}" method="post">
 
                 <!-- Grupo: Correo Electronico -->
                 <div class="formulario-grupo" id="grupo-correo">
