--- a/src/main/resources/templates/usuario/linkCambiarContrasena.html
+++ b/src/main/resources/templates/usuario/linkCambiarContrasena.html
@@ -15,11 +15,10 @@
 
 <body>
     <!-- Header -->
-    <div th:insert="~{usuario/templateUsuario.html::header}" th:if="${sesion==null}"></div>
+    <div th:insert="~{usuario/templateUsuario.html::header-link}" th:if="${sesion==null}"></div>
+    <!-- <div th:insert="~{usuario/templateUsuario.html::header-link}" th:unless="${sesion==null}"></div> -->
+<h1>Cambiar Header</h1>
 
-    <div th:insert="~{usuario/templateUsuario.html::header-user}" th:unless="${sesion==null}"></div>
-
-    <!-- <div th:insert="~{usuario/template_usuario.html::header-user}" th:unless="${sesion==null}"></div> -->
     <br><br><br>
 
     <!-- Page Content -->
@@ -78,20 +77,13 @@
     </div>
     <br>
     <!-- Footer -->
-    <div th:insert="~{usuario/template_usuario.html::footer}"></div>
+    <div th:insert="~{usuario/templateUsuario.html::footer-user}"></div>
 
-    <!-- Bootstrap core JavaScript -->
-    <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-    <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-    <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js}"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-        </script>
-    <script src="https://code.jquery.com/jquery-3.7.1.js"
-        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script th:src="@{/scripts/formulario.js}"></script>
 
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
-    <script th:src="@{/js/script.js}"></script>
 </body>
 
 </html>
