Cambio nombre del header a header inicial

--- a/src/main/resources/templates/usuario/templateUsuario.html
+++ b/src/main/resources/templates/usuario/templateUsuario.html
@@ -1,6 +1,6 @@
 <!-- Header Usuario sin logeo-->
 
-<div th:fragment="header">
+<div th:fragment="header-inicial">
     <header>
         <div class="contenedor-header">
             <div class="logo-header">
