--- a/src/main/resources/templates/usuario/bloqueado.html
+++ b/src/main/resources/templates/usuario/bloqueado.html
@@ -12,7 +12,7 @@
 <body>
 
     <!-- Header -->
-    <div th:insert="~{usuario/templateUsuario.html::header}" th:if="${sesion==null}"></div>
+    <div th:insert="~{usuario/templateUsuario.html::header-inicial}" th:if="${sesion==null}"></div>
 
     <!-- Main -->
     <main>
