--- a/src/main/resources/templates/usuario/iniciarSesion.html
+++ b/src/main/resources/templates/usuario/iniciarSesion.html
@@ -49,7 +49,7 @@
                     <label for="contrasena" class="formulario-label">Contraseña</label>
                     <div class="formulario-grupo-input">
                         <input type="password" class="formulario-input" name="contrasena" id="password" required
-                            autocomplete="off">
+                            autocomplete="off" placeholder="Ingresá tu contraseña">
                     </div>
                 </div>
 
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="contenedor-boton mrt-30">
-                    <a class="black" th:href="@{/email/recuperarContrasena}">¿Olvidaste la contraseña?</a>
+                    <a class="" th:href="@{/email/recuperarContrasena}">¿Olvidaste la contraseña?</a>
                 </div>
             </form>
         </div>
