--- a/src/main/resources/templates/usuario/recuperarContrasena.html
+++ b/src/main/resources/templates/usuario/recuperarContrasena.html
@@ -52,7 +52,8 @@
 
                         <div class="form-group w100 mrt-30">
                             <div class="col-sm-12 center">
-                                <button type="submit" class="btn btn-dark"> <span class="glyphicon glyphicon-ok"></span>
+                                <button type="submit" class="btn btn-dark"><img class="w25  mr-10" th:src="@{/iconos/enviar-blanco.png}"
+                                    alt="enviar-blanco">
                                     Enviar</button>
                             </div>
                         </div>
@@ -60,11 +61,11 @@
                 </div>
             </div>
 
-            <div class="card mb-3 center deco-none border mrt">
+            <div class="card mb-3 center deco-none border mrt-30">
                 <div class="row no-gutters center">
                     <div class="col-md-12">
                         <div class="card-body">
-                            <a class="black" th:href="@{/usuario/login}">¿Ya tenes una cuenta? <strong> Inicia Sesión</strong></a>
+                            <a class="black" th:href="@{/usuario/iniciarSesion}">¿Ya tenes una cuenta? <strong> Inicia Sesión</strong></a>
                             <br>
                             <a class="black" th:href="@{/usuario/registro}">¿No tenes cuenta? <strong> Registrate</strong></a>
                             <br>
