Cambio link cambiar contraseña

--- a/src/main/resources/templates/usuario/email.html
+++ b/src/main/resources/templates/usuario/email.html
@@ -27,7 +27,9 @@
     <center>
 
         <!-- <a th:href="@{https://pknwqtzv-8080.brs.devtunnels.ms/usuario/linkCambiarContrasena/{id}(id=${id})}" -->
-        <a th:href="@{http://localhost:8080/usuario/linkCambiarContrasena/{id}(id=${IdUsuario})}"
+        <!-- <a th:href="@{http://localhost:8080/email/solicitarRestablecimiento}" -->
+        <!-- <a th:href="@{http://localhost:8080/usuario/linkCambiarContrasena/{id}(id=${IdUsuario})}" -->
+        <a th:href="@{http://localhost:8080/usuario/linkCambiarContrasena}"
             style="background-color: #252526; font-size:20px;color:#ffffff;text-decoration:none;color:#ffffff;text-decoration:none;padding:15px 25px;border-radius:5px;border:1px solid #252526;display:inline-block"
             target="_blank" data-saferedirecturl="">
             Cambiar mi contraseña
