--- a/src/main/resources/templates/usuario/iniciarSesion.html
+++ b/src/main/resources/templates/usuario/iniciarSesion.html
@@ -59,7 +59,8 @@
                 </div>
 
                 <div class="contenedor-boton mrt-30">
-                    <a class="" th:href="@{/email/recuperarContrasena}">¿Olvidaste la contraseña?</a>
+                    <!-- <a class="" th:href="@{/usuario/linkCambiarContrasena}">¿Olvidaste la contraseña?</a> -->
+                    <a class="" th:href="@{/usuario/solicitarRestablecimiento}">¿Olvidaste la contraseña?</a>
                 </div>
             </form>
         </div>
