--- a/src/main/resources/templates/usuario/linkCambiarContrasena2.html
+++ b/src/main/resources/templates/usuario/linkCambiarContrasena2.html
@@ -28,7 +28,9 @@
                 enctype="multipart/form-data">
                 <!-- Obtenemos los datos del usuario -->
                 <input type="hidden" name="IdUsuario" th:value="${usuario.IdUsuario}">
-
+                
+                 <!-- Agregamos el token -->
+                <input type="hidden" name="token" th:value="${token.token}">
                 <div class="center">
                     <div class="w50 mrt-10">
                         <h3 class="center mrt-30">Cambiar Contraseña</h3>
