--- a/src/main/resources/templates/usuario/recuperarContrasena.html
+++ b/src/main/resources/templates/usuario/recuperarContrasena.html
@@ -1,86 +1,90 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
-    <head>
+<head>
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        <title>Recepción de Equipos</title>
+    <title>Recepción de Equipos</title>
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link th:href="@{/css/estilos.css}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link th:href="@{/css/estilos.css}" rel="stylesheet">
 
-    </head>
+</head>
 
-    <body>
-        <!-- Navigation -->
+<body>
+    <!-- Navigation -->
 
-        <div th:insert="~{usuario/templateUsuario.html::header-inicial}" th:if="${sesion==null}"></div>
+    <div th:insert="~{usuario/templateUsuario.html::header-inicial}" th:if="${sesion==null}"></div>
 
-        <br><br><br><br>
+    <br><br><br><br>
 
-        <!-- Page Content -->
-        <div class="container w75">
+    <!-- Page Content -->
+    <div class="container w75">
 
-            <div class="card h-100 border">
-                <div class="w100 center">
-                    <img class="card-img-top w150" th:src="@{/imagenes/iniciarSesion.png}" alt="login">
-                </div>
-                <h2 class="center">¿Olvidaste tu Contraseña?</h2>
-                <div class="card-body">
-                    <div class="card border center">
-                        <h6 class="justify text-indent w90 mr-20">Si olvidaste tu contraseña, utiliza el siguiente
-                            formulario para solicitar un enlace para cambiarla.</h6>
-                    </div>
-                </div>
-
-                <div class="card-body">
-                    <form th:action="@{/email/send}" method="post" enctype="multipart/form-data">
-                        <div class="card border">
-                            <div class="form-group w90 mr-20">
-                                <label for="destinatario"> Email: </label>
-                                <input type="email" class="form-control" id="destinatario" name="destinatario"
-                                       placeholder="Ingrese su email" required autocomplete="off">
-                                <input type="hidden" class="form-control" id="asunto" name="asunto" value="Recuperar Contraseña">
-                                <input type="hidden" class="form-control" id="mensaje" name="mensaje">
-                            </div>
-                        </div>
-
-                        <div class="form-group w100 mrt-30">
-                            <div class="col-sm-12 center">
-                                <button type="submit" class="btn btn-dark"><img class="w25  mr-10" th:src="@{/iconos/enviar-blanco.png}"
-                                    alt="enviar-blanco">
-                                    Enviar</button>
-                            </div>
-                        </div>
-                    </form>
+        <div class="card h-100 border">
+            <div class="w100 center">
+                <img class="card-img-top w150" th:src="@{/imagenes/iniciarSesion.png}" alt="login">
+            </div>
+            <h2 class="center">¿Olvidaste tu Contraseña?</h2>
+            <div class="card-body">
+                <div class="card border center">
+                    <h6 class="justify text-indent w90 mr-20">Si olvidaste tu contraseña, utiliza el siguiente
+                        formulario para solicitar un enlace para cambiarla.</h6>
                 </div>
             </div>
 
-            <div class="card mb-3 center deco-none border mrt-30">
-                <div class="row no-gutters center">
-                    <div class="col-md-12">
-                        <div class="card-body">
-                            <a class="black" th:href="@{/usuario/iniciarSesion}">¿Ya tenes una cuenta? <strong> Inicia Sesión</strong></a>
-                            <br>
-                            <a class="black" th:href="@{/usuario/registro}">¿No tenes cuenta? <strong> Registrate</strong></a>
-                            <br>
-                            <a class="black" href="#destinatario">¿No recibiste el correo? <strong>Reenvialo</strong></a>
+            <div class="card-body">
+                <!-- <form th:action="@{/email/send}" method="post" enctype="multipart/form-data"> -->
+                    <form th:action="@{/usuario/solicitarRestablecimiento}" method="post" enctype="multipart/form-data">
+                    <div class="card border">
+                        <div class="form-group w90 mr-20">
+                            <label for="destinatario"> Email: </label>
+                            <input type="email" class="form-control" id="destinatario" name="destinatario"
+                                placeholder="Ingrese su email" required autocomplete="off">
+                            <input type="hidden" class="form-control" id="asunto" name="asunto"
+                                value="Recuperar Contraseña">
+                            <input type="hidden" class="form-control" id="mensaje" name="mensaje">
                         </div>
                     </div>
-                </div>
+
+                    <div class="form-group w100 mrt-30">
+                        <div class="col-sm-12 center">
+                            <button type="submit" class="btn btn-dark"><img class="w25  mr-10"
+                                    th:src="@{/iconos/enviar-blanco.png}" alt="enviar-blanco">
+                                Enviar</button>
+                        </div>
+                    </div>
+                </form>
             </div>
-
-
         </div>
-        <br>
-        <!-- Footer -->
-        <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer-user}"></div>
 
-    </body>
+        <div class="card mb-3 center deco-none border mrt-30">
+            <div class="row no-gutters center">
+                <div class="col-md-12">
+                    <div class="card-body">
+                        <a class="black" th:href="@{/usuario/iniciarSesion}">¿Ya tenes una cuenta? <strong> Inicia
+                                Sesión</strong></a>
+                        <br>
+                        <a class="black" th:href="@{/usuario/registro}">¿No tenes cuenta? <strong>
+                                Registrate</strong></a>
+                        <br>
+                        <a class="black" href="#destinatario">¿No recibiste el correo? <strong>Reenvialo</strong></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    <br>
+    <!-- Footer -->
+    <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer-user}"></div>
+
+</body>
 
 </html>
